--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "jest": "^29.4.0",
     "parcel": "^2.8.0",
     "ts-jest": "^29.0.5"
-  }
+  },
+    "scripts": {
+      "test": "npx jest --watchAll"
+    }
 }
