--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
     "@parcel/validator-typescript": "^2.8.0",
     "@types/jest": "^29.2.6",
     "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
     "parcel": "^2.8.0",
     "ts-jest": "^29.0.5"
   },
-    "scripts": {
-      "test": "npx jest --watchAll"
-    }
+  "scripts": {
+    "test": "npx jest --watchAll"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "html"
+    ]
+  }
 }
